components/volsync-system/kopia/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
  labels:
    app.kubernetes.io/instance: kopia
    app.kubernetes.io/name: kopia
  annotations:
    gethomepage.dev/href: "https://kopia.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/kopia.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["kopia.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: kopia
          port: 80
